real dark mode fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,8 @@ elara-app {
 }
 
 :root {
+  color-scheme: light dark;
+  
   --elara-darkgray: #2f2f2f;
   --elara-lightgray: #f2f2f2;
   --elara-background-color: #f2f2f2;
@@ -60,12 +62,10 @@ elara-app {
   -ms-user-select: text;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --elara-background-color: #373737;
-    --elara-font-color: #f0f0f0;
-    --elara-font-hover: rgb(255, 255, 255, 0.3);
-  }
+.night {
+  --elara-background-color: #373737;
+  --elara-font-color: #f0f0f0;
+  --elara-font-hover: rgb(255, 255, 255, 0.3);
 
   ::selection {
     background: #324a4e;
@@ -75,16 +75,15 @@ elara-app {
   }
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    --elara-background-color: #f2f2f2;
-    --elara-font-color: #2f2f2f;
-    --elara-font-hover: rgb(0, 0, 0, 0.3);
-  }
+.day {
+  --elara-background-color: #f2f2f2;
+  --elara-font-color: #2f2f2f;
+  --elara-font-hover: rgb(0, 0, 0, 0.3);
 
   ::selection {
     background: #f3f3f3;
   }
+  
   ::-moz-selection {
     background: #f3f3f3;
   }
